--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,12 @@
   border: 0;
   box-sizing: border-box;
   color: antiquewhite;
+
 }
 
 body{
   background-color: #ad789b;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
