--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -22,7 +22,7 @@
   align-items: center;
   border: 1px solid #b7afda;
   border-radius: 8px;
-  background-color: #612956;
+  background-color: #37253e;
   width: 100%;
   height: 200px;
   font-size: 20px;
@@ -45,7 +45,7 @@
   width: 50%;
   display: inline-block;
   cursor: pointer;
-  color: #ffffff;
+  color: white;
   font-family: Arial;
   font-size: 17px;
   padding: 16px 31px;
@@ -53,8 +53,12 @@
   text-shadow: 0px 1px 0px #b65396;
 }
 
+.btn-option{
+  background-color: #37253e;
+}
+
 .btn-option:hover{
-  background-color: #473a58;
+  background-color: #a091e3;
 }
 
 .btn-option:active{
